<resources>
    <string name="app_name">Navigation</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="nested_navigation">Nested Navigation</string>
    <string name="navigation_two_containers">Navigation two containers</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="fragment_a">FRAGMENT-A</string>
    <string name="fragment_b">FRAGMENT-B</string>
    <string name="fragment_c">FRAGMENT-C</string>
    <string name="fragment_d">FRAGMENT-D</string>
    <string name="back">Back</string>
    <string name="fragment_e">FRAGMENT-E</string>
    <string name="fragment_f">FRAGMENT-F</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_fragment_a">FRAGMENT-A</string>
    <string name="menu_fragment_b">FRAGMENT-B</string>
    <string name="menu_fragment_c">FRAGMENT-C</string>
    <string name="bottom_navigation_view">Bottom navigation view</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="more">More</string>
    <string name="navigation">Navigation</string>
    <string name="life_cycle_aware_component">Life-cycle aware component</string>
    <string name="android_jetpack">Android Jetpack</string>
    <string name="life_cycle_aware">Life cycle aware component</string>
    <string name="data_store">Data store</string>
    <string name="preferences_data_store">Preferences Data Store</string>
    <string name="proto_data_store">Proto Data Store</string>
    <string name="enter_some_text_to_save">Enter some text to save</string>
    <string name="save_data">Save Data</string>
    <string name="under_construction">Under Construction</string>
    <string name="liveData">LiveData</string>
    <string name="mutable_live_data">Mutable Live Data</string>
    <string name="mediator_live_data">Mediator Live Data</string>
    <string name="increment_counter">Increment Counter</string>
    <string name="live_data">LiveData</string>
    <string name="paging3">Paging3</string>
    <string name="camera_x">Camera X</string>
    <string name="paging_using_remote_and_local">Using remote and local source</string>
    <string name="paging_from_local_database">Using local source</string>
    <string name="paging_from_remote_source">Using remote source</string>
    <string name="paging_from_api">Paging from api</string>
    <string name="goto_bottom">Goto Bottom</string>
    <string name="goto_top">Goto Top</string>
    <string name="work_manager">WorkManager</string>
    <string name="work_mng_ex_one">work manager example one</string>
    <string name="cancel">Cancel</string>
    <string name="pick_photos">Pick photos</string>
    <string name="text_retry">Retry</string>
    <string name="text_score_desc">Score Image</string>
    <string name="text_comment_desc">Comment Image</string>
    <string name="content">content</string>
    <string name="simple_worker">Simple Worker</string>
    <string name="chaining_worker">Chaining Worker</string>
</resources>