<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:fitsSystemWindows="true"
    android:padding="@dimen/screen_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/jetpackNavigationId"
            android:text="@string/navigation"
            style="@style/launchBtnStyle"/>

        <Button
            android:id="@+id/jetPackLifeCycleAwareId"
            android:text="@string/life_cycle_aware_component"
            style="@style/launchBtnStyle"/>

        <Button
            android:id="@+id/jetDataStoreId"
            android:text="@string/data_store"
            style="@style/launchBtnStyle"/>

        <Button
            android:id="@+id/jetLiveDataId"
            android:text="@string/liveData"
            style="@style/launchBtnStyle"/>

        <Button
            android:id="@+id/jetPackPaging3Id"
            android:text="@string/paging3"
            style="@style/launchBtnStyle"/>

        <Button
            android:id="@+id/jetPackCameraXId"
            android:text="@string/camera_x"
            style="@style/launchBtnStyle"/>

        <Button
            android:id="@+id/workManagerId"
            android:text="@string/work_manager"
            style="@style/launchBtnStyle"/>

    </LinearLayout>
</ScrollView>